# ffimg-gen

./: .gitignore  README.md  main.py  pyproject.toml
examples/: ip.yaml  wpilog.yaml
src/ffimg_gen/: __main__.py
